--- a/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
@@ -75,11 +75,179 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- 4. ML-based Imputation with SimpleImputer ---\n",
+      "Missing values in 'col1' imputed using mean.\n",
+      "Missing values in 'col2' imputed using mean.\n",
+      "Missing values in 'col4' imputed using mean.\n",
+      "\n",
+      "--- 5. Imputation using a Regression Model ---\n",
+      "Missing values in 'col1' imputed using Linear Regression.\n",
+      "Missing values in 'col2' imputed using Linear Regression.\n",
+      "Missing values in 'col4' imputed using Linear Regression.\n",
+      "\n",
+      "--- 6. K-Nearest Neighbors Imputation ---\n",
+      "Missing values in 'col1' imputed using KNN (n_neighbors=5).\n",
+      "Missing values in 'col2' imputed using KNN (n_neighbors=5).\n",
+      "Missing values in 'col4' imputed using KNN (n_neighbors=5).\n",
+      "\n",
+      "--- Imputed DataFrames ---\n",
+      "\n",
+      "DataFrame after SimpleImputer:\n",
+      "       col1  col2 col3    col4\n",
+      "0  1.000000   8.0    a  10.500\n",
+      "1  2.000000   7.0    b  13.125\n",
+      "2  2.333333   8.0    c  12.300\n",
+      "3  4.000000   9.0    d  14.700\n",
+      "4  2.333333   8.0    e  15.000\n",
+      "\n",
+      "DataFrame after Regression Imputation:\n",
+      "       col1      col2 col3       col4\n",
+      "0  1.000000  6.000000    a  10.500000\n",
+      "1  2.000000  7.000000    b  12.022888\n",
+      "2  2.142857  7.142857    c  12.300000\n",
+      "3  4.000000  9.000000    d  14.700000\n",
+      "4  3.857143  8.857143    e  15.000000\n",
+      "\n",
+      "DataFrame after KNN Imputation:\n",
+      "       col1  col2 col3    col4\n",
+      "0  1.000000   8.0    a  10.500\n",
+      "1  2.000000   7.0    b  13.125\n",
+      "2  2.333333   8.0    c  12.300\n",
+      "3  4.000000   9.0    d  14.700\n",
+      "4  2.333333   8.0    e  15.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer, KNNImputer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "\n",
+    "def perform_predictive_imputation(df, numeric_cols):\n",
+    "    \"\"\"\n",
+    "    Performs ML-based imputation on a Pandas DataFrame for specified numeric columns.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        numeric_cols (list): A list of numeric column names to impute.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with missing values imputed using different methods.\n",
+    "    \"\"\"\n",
+    "    df_imputed = df.copy()\n",
+    "\n",
+    "    print(\"\\n--- 4. ML-based Imputation with SimpleImputer ---\")\n",
+    "    for col in numeric_cols:\n",
+    "        if df_imputed[col].isnull().any():\n",
+    "            imputer_mean = SimpleImputer(strategy='mean')\n",
+    "            df_imputed[[col]] = imputer_mean.fit_transform(df_imputed[[col]])\n",
+    "            print(f\"Missing values in '{col}' imputed using mean.\")\n",
+    "        else:\n",
+    "            print(f\"No missing values in '{col}', SimpleImputer (mean) not applied.\")\n",
+    "\n",
+    "    df_regression_imputed = df.copy()\n",
+    "    print(\"\\n--- 5. Imputation using a Regression Model ---\")\n",
+    "    for col_to_impute in numeric_cols:\n",
+    "        if df_regression_imputed[col_to_impute].isnull().any():\n",
+    "            features = [col for col in numeric_cols if col != col_to_impute]\n",
+    "            if not features:\n",
+    "                print(f\"Cannot perform regression imputation for '{col_to_impute}' as there are no other numeric columns as features.\")\n",
+    "                continue\n",
+    "\n",
+    "            train_data = df_regression_imputed[df_regression_imputed[col_to_impute].notnull()]\n",
+    "            test_data = df_regression_imputed[df_regression_imputed[col_to_impute].isnull()].drop(columns=[col_to_impute])\n",
+    "\n",
+    "            if train_data.empty or test_data.empty:\n",
+    "                print(f\"Not enough complete or missing data in '{col_to_impute}' for regression imputation.\")\n",
+    "                continue\n",
+    "\n",
+    "            # Impute missing values in features of training data\n",
+    "            feature_imputer = SimpleImputer(strategy='mean') # Or other strategy\n",
+    "            X_train = pd.DataFrame(feature_imputer.fit_transform(train_data[features]), columns=features, index=train_data.index)\n",
+    "            y_train = train_data[col_to_impute]\n",
+    "\n",
+    "            # Impute missing values in features of testing data using the fitted imputer\n",
+    "            X_test_imputed = pd.DataFrame(feature_imputer.transform(test_data[features]), columns=features, index=test_data.index)\n",
+    "            X_test = X_test_imputed\n",
+    "\n",
+    "            # Train a Linear Regression model\n",
+    "            model = LinearRegression()\n",
+    "            model.fit(X_train, y_train)\n",
+    "\n",
+    "            # Predict missing values\n",
+    "            predicted_values = model.predict(X_test)\n",
+    "\n",
+    "            # Fill missing values in the original DataFrame copy\n",
+    "            df_regression_imputed.loc[df_regression_imputed[col_to_impute].isnull(), col_to_impute] = predicted_values\n",
+    "            print(f\"Missing values in '{col_to_impute}' imputed using Linear Regression.\")\n",
+    "        else:\n",
+    "            print(f\"No missing values in '{col_to_impute}', Regression Imputation not applied.\")\n",
+    "\n",
+    "    df_knn_imputed = df.copy()\n",
+    "    print(\"\\n--- 6. K-Nearest Neighbors Imputation ---\")\n",
+    "    for col in numeric_cols:\n",
+    "        if df_knn_imputed[col].isnull().any():\n",
+    "            knn_imputer = KNNImputer(n_neighbors=5)\n",
+    "            df_knn_imputed[[col]] = knn_imputer.fit_transform(df_knn_imputed[[col]])\n",
+    "            print(f\"Missing values in '{col}' imputed using KNN (n_neighbors=5).\")\n",
+    "        else:\n",
+    "            print(f\"No missing values in '{col}', KNNImputer not applied.\")\n",
+    "\n",
+    "    return df_imputed, df_regression_imputed, df_knn_imputed\n",
+    "\n",
+    "# Example Usage (same as before):\n",
+    "data = {'col1': [1, 2, np.nan, 4, np.nan],\n",
+    "        'col2': [np.nan, 7, np.nan, 9, np.nan],\n",
+    "        'col3': ['a', 'b', 'c', 'd', 'e'],\n",
+    "        'col4': [10.5, np.nan, 12.3, 14.7, 15.0]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "numeric_columns = df.select_dtypes(include=np.number).columns.tolist()\n",
+    "\n",
+    "df_simple_imputed, df_regression_imputed, df_knn_imputed = perform_predictive_imputation(df.copy(), numeric_columns)\n",
+    "\n",
+    "print(\"\\n--- Imputed DataFrames ---\")\n",
+    "print(\"\\nDataFrame after SimpleImputer:\")\n",
+    "print(df_simple_imputed)\n",
+    "\n",
+    "print(\"\\nDataFrame after Regression Imputation:\")\n",
+    "print(df_regression_imputed)\n",
+    "\n",
+    "print(\"\\nDataFrame after KNN Imputation:\")\n",
+    "print(df_knn_imputed)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
